[FIX] scrollbar in ie

--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -109,7 +109,7 @@ y-axis
 
 .mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{ /* the dragger element */
     position: relative;
-    width: 4px;
+    width: 7px;
     height: 100%;
     margin: 0 auto;
     -webkit-border-radius: 16px; -moz-border-radius: 16px; border-radius: 16px;
@@ -1018,7 +1018,7 @@ yx-axis
 .mCS-minimal-dark.mCSB_scrollTools .mCSB_draggerRail{ background-color: transparent; }
 
 .mCS-minimal.mCSB_scrollTools_vertical .mCSB_dragger,
-.mCS-minimal-dark.mCSB_scrollTools_vertical .mCSB_dragger{ height: 50px; }
+.mCS-minimal-dark.mCSB_scrollTools_vertical .mCSB_dragger{ height: 30px; }
 
 .mCS-minimal.mCSB_scrollTools_horizontal .mCSB_dragger,
 .mCS-minimal-dark.mCSB_scrollTools_horizontal .mCSB_dragger{ width: 50px; }
